Added a description of the readings to asg1

--- a/asg1/index.html
+++ b/asg1/index.html
@@ -8,7 +8,13 @@
 <body>
 
 	<h1>Assignment 1</h1>
-	<p>Future assignments will be listed here.</p>
+	<h2>Reading</h2>
+	<p>From this week's reading material, I learned a lot about the early web:</p>
+	<ol>
+		<li>The early web was more static and less interactive than today's Internet. It was essentially a digital magazine, with pictures and articles that could be read, but without the ability to do things like leave comments or interact with a site beyond viewing it.</li>
+		<li>Coders have been using "hacks", such as a single-pixel gif to create space on a page, since practically the invention of html.</li>
+		<li>The use of personal sites over social media is making a comeback today, as people are beginning to prefer the privacy and the ability to own their own data.</li>
+	</ol>
 
 	<script src="./assets/js/main.js"></script>
 </body>
