Added semester project brainstorming to asg1

--- a/asg1/index.html
+++ b/asg1/index.html
@@ -15,6 +15,17 @@
 		<li>Coders have been using "hacks", such as a single-pixel gif to create space on a page, since practically the invention of html.</li>
 		<li>The use of personal sites over social media is making a comeback today, as people are beginning to prefer the privacy and the ability to own their own data.</li>
 	</ol>
+	<br>
+	<br>
+	<h2>Semester Project Brainstorming</h2>
+	<p>I've been looking for a good website to manage a to-do list on recently, and nothing has been able to meet my exact needs. What I'm looking for is a site where I can:</p>
+	<ul>
+		<li>Assign subtasks to tasks. (For example, "do reading" would be a subtask of this week's "do homework" task.</li>
+		<li>Assign priority to tasks - between urgent and non-urgent tasks, and things I <em>need</em> to do vs. things I <em>want</em> to do.</li>
+		<li>Assign tasks over a period of time. (For example, I need to finish this homework assignment any time this week.)</li>
+		<li>Allow me to set up a reward system for myself for completing a certain number/percentage of tasks. (For example: if I do all my homework this week, I can go buy a cookie from Insomnia!)</li>
+	</ul>
+	<p>This is something I believe would help not just me, but also others who struggle to get things done and make to-do list. Additionally, the rewards element adds room for business promotion via in-site special offers.</p>
 
 	<script src="./assets/js/main.js"></script>
 </body>
