Fixed preliminary issues with hero.html

--- a/asg2/hero.html
+++ b/asg2/hero.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>Rumi</h1>
-<img src="https://static.wikia.nocookie.net/kpop-demon-hunters/images/3/31/Rumi_Portrait.png/revision/latest?cb=20250725045033">
+<img src="https://static.wikia.nocookie.net/kpop-demon-hunters/images/3/31/Rumi_Portrait.png">
 <h2>About</h2>
 <h3>Intro</h3>
     <p>Rumi is the main character of the animated film <em><a href="https://en.wikipedia.org/wiki/KPop_Demon_Hunters">KPOP Demon Hunters</a></em>. She is the leader of the Kpop group "HUNTR/X" by day, and a demon hunter by night.</p>
@@ -21,17 +21,11 @@
 <br>
 <h2>Story</h2>
     <p>Via <a href="https://en.wikipedia.org/wiki/KPop_Demon_Hunters">Wikipedia</a>:</p>
-    <br>
     <p>After completing their world tour, Huntr/x release and prepare for the first live performance of a new single, "Golden", until Rumi begins losing her voice due to her demon patterns spreading.</p>
-    <br>
     <p>While on a trip to see a doctor for Rumi, Huntr/x encounters the Saja Boys, a new boy band, and realizes that the band is actually made up of demons seeking to steal the souls of Huntr/x's fans. The hunters persue Saja, and while fighting, Rumi and Jinu, the demon band's leader, are separated from the others. Jinu discovers Rumi's demon marks as they fight, but helps hide it from her bandmates.</p>
-    <br>
     <p>As the Idol Awards approach, Huntr/x rush to produce a new song, "Takedown", to expose the Saja Boys while their popularity skyrockets. Mira grows suspicious when Rumi questions if "Takedown" is too hateful toward demons. Torn between her identities, Rumi proposes a plan to Jinu: if he helps Huntr/x win the Idol Awards and strengthen the Honmoon, he could freely stay in the human world. Later, Rumi confides in Jinu that her shame over her heritage weakened her voice, but talking with him healed it. Jinu states that he no longer hears voices thanks to Rumi, and agrees to sabotage the Saja Boys.</p>
-    <br>
     <p>At the Idol Awards, the Saja Boys fail to appear, and Huntr/x perform "Golden", having chosen to shelve "Takedown" due to the contention it caused within the group. However, impostor demons sent by Jinu split Mira and Zoey from Rumi, then pose as them to trick Rumi into performing "Takedown", during which they publicly reveal her demon marks. She flees the stage and runs into the real Mira and Zoey, who feel betrayed upon learning of her heritage and collusion with Jinu. Rumi confronts Jinu for tricking her, and he admits to lying about his past.</p>
-    <br>
     <p>While the Saja Boys perform a concert meant to permanently destroy the barrier between the human and demon worlds, Rumi meets with Celine and desperately asks her to end her life. Celine refuses and offers to conceal the events, but Rumi lashes out at Celine for never fully loving her before leaving.</p>
-    <br>
     <p>Rumi interrupts the Saja Boys' performance with a new song addressing shame and self-acceptance. Mira and Zoey join her. Reunited, Huntr/x fight back and defeat the demons.</p>
 <br>
 <h2>Why She's A Hero</h2>
