fixed link in asg2/index.html

--- a/asg2/index.html
+++ b/asg2/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<p><a href="./index.html">Home</a></p>
+<p><a href="https://elizabeth-milani-is1.netlify.app/">Home</a></p>
 <h1>Assignment 2</h1>
 <h2>Conversations with Robots: Voice, Smart Agents, & the Case for Structured Content</h2>
     <h3>What is the difference between structured content and semantic HTML?</h3>
