--- a/asg3/index.html
+++ b/asg3/index.html
@@ -9,9 +9,8 @@
 	<link href="styles.css" rel="stylesheet">
 </head>
 <body>
-
-	<h1>Website Template</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
-	
+<h1>Website Template</h1>
+<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
+<img src="img/flower face.jpg">
 </body>
 </html>
