--- a/asg3/index.html
+++ b/asg3/index.html
@@ -11,6 +11,6 @@
 <body>
 <h1>Website Template</h1>
 <p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
-<img src="img/flower face.jpg">
+<img src="img/flower-face.jpg">
 </body>
 </html>
