--- a/asg3/favorite-band.html
+++ b/asg3/favorite-band.html
@@ -13,17 +13,30 @@
 	<h2>About</h2>
 		<p>Flower Face is the stage name used by bedroom pop singer-songwriter Ruby McKinnon. She has released four albums on streaming services: <em>Fever Dreams</em> (2016), <em>Baby Teeth</em> (2018), <em>The Shark in Your Water</em> (2022), and <em>Girl Prometheus</em>.</p>
 		<p>She is based in Ontario, Canada.</p>
+		<p>You can learn more on Flower Face's <a href="https://www.flowerface.com/">website</a>!</p>
 	<h2>Why She Is My Favorite</h2>
 		<h3>The Lyrics</h3>
 			<p>Flower Face's lyrics are beautifully poetic, and just as haunting. The perfect example of her masterful lyricism is her song "Angela", which features lines such as <em>"You walk like a miracle, bathing in starlight / Your voice burning holes in the frame / I danced in the parking lot, cried in the taxi home / 'Cause I still remember your name"</em>. Through these lyrics, Flower Face expertly conveys the feeling of longing and heartbreak.</p>
-			<iframe data-testid="embed-iframe" style="border-radius:12" src="https://open.spotify.com/embed/track/0wzThSEGQOnrGtFnyxGSMZ?utm_source=generator&theme=0" width="75%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			<iframe data-testid="embed-iframe" style="border-radius:12" src="https://open.spotify.com/embed/track/0wzThSEGQOnrGtFnyxGSMZ?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<h3>The Emotion</h3>
 			<p>Flower Face's songs are full of raw emotion (most of them sad, but the songs that aren't sad invoke just as palpable feelings). Her song "Valentine" conveys the pure sadness she feels after a breakup through subdued instrumentals, soft singing, and lyrics that rip your heart out.</p>
-			<iframe data-testid="embed-iframe" style="border-radius:12" src="https://open.spotify.com/embed/track/2ZXwbxcnIsB7rxbPj5mEMk?utm_source=generator&theme=0" width="75%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			<iframe data-testid="embed-iframe" style="border-radius:12" src="https://open.spotify.com/embed/track/2ZXwbxcnIsB7rxbPj5mEMk?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<h3>Callbacks</h3>
 			<p>Flower Face's songs don't just exist in a vacuum - they call back to and reference each other, adding an extra treat for fans with a good ear. In "Isobel" (2022), the lyrics <em>"Do you still think you're a killer, or that you could be if you tried?"</em> appear, and in "Cordelia" (2024), Flower Face sings that <em>"I think that I am evil / I could kill you if I tried"</em>.</p>
 			<p>These callbacks also happen within the songs themselves. Back to "Cordelia", early in the song, there is the lyric: <em>"They say the stars are dying, but so is everybody else"</em>. Later on in the same song, Flower Face sings, <em>"I think I heard you on the radio / You sounded like a star"</em>.</p>
-			<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/7aEex616k5w24dsBcquzzE?utm_source=generator" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3cd8IhPXqPLaIOuA4bIW56?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-<img src="img/flower-face.jpg">
+			<iframe data-testid="embed-iframe" style="border-radius:12" src="https://open.spotify.com/embed/track/7aEex616k5w24dsBcquzzE?utm_source=generator" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			<iframe data-testid="embed-iframe" style="border-radius:12" src="https://open.spotify.com/embed/track/3cd8IhPXqPLaIOuA4bIW56?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		<h3>The Instrumentals</h3>
+			<p>Good lyrics are nothing without good instrumentals, and Flower Face has both. Just look as how she was able to release an entirely instrumental version of her most recent album, "Girl Prometheus", and have it still be as amazing to listen to as the original.</p>
+			<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3HjUBsiH7BLIpB9LbTVrYd?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+	<h2>More Like Flower Face</h2>
+		<ul>
+			<li><a href="https://open.spotify.com/artist/3Os4q49SgEN0Tv3fxKw3Sp?si=KgVRaseYQcaMXb7_wsROnQ">Delaney Bailey</a></li>
+			<li><a href="https://open.spotify.com/artist/1rzNAiuTXmnncP3ZVXfgV1?si=ebwgyGhFTvK7wWB7MbQOkA">Honey Gentry</a></li>
+			<li><a href="https://open.spotify.com/artist/1ZwhhTSUPr7EBZHd1GjOT7?si=fyrqvTTYQS20ejK6wHZEqA">Mehro</a></li>
+			<li><a href="https://open.spotify.com/artist/40Aif8AfzbNGA2s52ESEE2?si=znnCOiM-TM-HO4llJSDQyw"">Sofia Isella</a></li>
+		</ul>
+	<h2>Media</h2>
+	<img src="img/flower-face.jpg">
 </body>
 </html>
