--- a/asg3/index.html
+++ b/asg3/index.html
@@ -1,1 +1,18 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>Assignment 3</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	<link href="styles.css" rel="stylesheet">
+</head>
+<body>
+<p><a href="https://elizabeth-milani-is1.netlify.app/">Home</a></p>
+<h1>Assignment 2</h1>
+<h2>Readings</h2>
+  <h3>Dos and Don'ts of Web Design</h3>
+    <p>The social media site <a href="https://www.tumblr.com/dashboard" target="_blank">Tumblr</a> has many functions that are far from obvious. For example, in order to see the original version of a reblogged post, you have to click on the right of the bar containing the original poster's username, with no indication of this being what must be done. Additionally, when you hover your mouse over a user's icon, it shows a preview of their profile page, with three little dots that look like they should be interactive, but are not.</p>
+</body>
+</html>
