Update index.html to add "better user experience through storytelling"

--- a/asg3/index.html
+++ b/asg3/index.html
@@ -12,7 +12,10 @@
 <p><a href="https://elizabeth-milani-is1.netlify.app/">Home</a></p>
 <h1>Assignment 2</h1>
 <h2>Readings</h2>
-  <h3>Dos and Don'ts of Web Design</h3>
-    <p>The social media site <a href="https://www.tumblr.com/dashboard" target="_blank">Tumblr</a> has many functions that are far from obvious. For example, in order to see the original version of a reblogged post, you have to click on the right of the bar containing the original poster's username, with no indication of this being what must be done. Additionally, when you hover your mouse over a user's icon, it shows a preview of their profile page, with three little dots that look like they should be interactive, but are not.</p>
+	<h3>Dos and Don'ts of Web Design</h3>
+    	<p>The social media site <a href="https://www.tumblr.com/dashboard" target="_blank">Tumblr</a> has many functions that are far from obvious. For example, in order to see the original version of a reblogged post, you have to click on the right of the bar containing the original poster's username, with no indication of this being what must be done. Additionally, when you hover your mouse over a user's icon, it shows a preview of their profile page, with three little dots that look like they should be interactive, but are not.</p>
+	<h3>Better User Experience Through Storytelling</h3>
+		<p>As a writer myself, this article really connected with me. A big part of how I plan stories is to go in knowing not just how a story will end (in terms of a UX project, this could translate to knowing the final product) but also knowing how it will begin, and what will happen in the middle. Having a hyper-specific plan can help refine not only ideas, but the process of executing them.</p>
+		<p>Additionally, making a project hinge around emotion, the way most narratives do, will inevitably bleed through to the user. If the creator(s) could put passion and emotion into a project, it'll shine through in the final project. This can also help the user themselves form emotions regarding the final product. If one thinks of a website as essentially a choose-your-own-adventure story, then every story option needs to be both engaging, simple to navigate to, and most importantly, not boring!</p>
 </body>
 </html>
