Update index.html to add creative brief

--- a/asg3/index.html
+++ b/asg3/index.html
@@ -19,5 +19,18 @@
 		<p>Additionally, making a project hinge around emotion, the way most narratives do, will inevitably bleed through to the user. If the creator(s) could put passion and emotion into a project, it'll shine through in the final project. This can also help the user themselves form emotions regarding the final product. If one thinks of a website as essentially a choose-your-own-adventure story, then every story option needs to be both engaging, simple to navigate to, and most importantly, not boring!</p>
 	<h3>Meet Your Type: A Fied Guide to Love and Typography</h3>
 		<p>Some ways to establish hierarchy include making more important words/sentences larger, bolder, and maybe even using a fun color! Alternatively, make less importantant things slimmer and smaller. The human eye tend to gravitate towards the middle of an image first, so take advantage of that when considering placement. I've always been fascinated by the beautiful hierarchy in <a href="https://cdn.vectorstock.com/i/1000v/63/17/newspaper-cover-page-empty-template-mockup-design-vector-50546317.jpg" target="_blank">newspapers</a> - the way the eye floats along the page so naturally, the way they boast their contents so clearly.</p>
+<h2>Creative Brief</h2>
+	<h3>Problem</h3>
+		<p>There is no to-do list website that is fully intuitive to a wide, diverse range of user tasks including nuanced deadlines and tasks within tasks.</p>
+	<h3>Audience</h3>
+		<p>Anyone could benefit from keeping a to-do list, but my target would be college students like myself who need a to-do list site that allows them to sort priorities, sub-tasks, and multi-day projects.</p>
+	<h3>Competition</h3>
+		<p>There are many to-do list websites out there already. The creation of this project is pushed by the fact that none of them have all the features necessary to work for what I and many other people I know need. The goal of this project is to take something that has already been created and make it better.</p>
+	<h3>Key Messages</h3>
+		<p>My goal is to make an intuitive to-do list system that allows for more than just putting items on a list for a single day. The appeal of this site should be the variety of task options and deadlines it offers.</p>
+	<h3>Call to Action</h3>
+		<p>Getting tasks organized can be the difference between success and failure, both at college and in the workplace. My goal is to create a way to organize tasks that allows for more than just "do this today" or "do this by x date".</p>
+	<h3>How to Measure Success</h3>
+		<p>User traffic is an important metric, but especially traffic from returning users - it means a lot if people like it enough to come back. Additionally, users can be surveyed upon making their first list and after using the site for a while to determine if the site has really helped them to organize their tasks more efficiently.</p>
 </body>
 </html>
