--- a/asg4/leastfavorite.html
+++ b/asg4/leastfavorite.html
@@ -16,26 +16,27 @@
 		<li>Toga Himiko, a villain whose story also revolves around romance, but her flirting with her love interests doesn't make me gag.</li>
 	</ul>
 <h2>Worst Hits</h2>
+	<p>The fact that critics love him so much just makes me hate Gentle Criminal even more. Not only does he suck, but everyone except me is blind to it.</p>
 	<table>
 		<tr>
 			<th>Event</th>
 			<th>Episode</th>
-			<th>Episode Rating</th>
+			<th>Episode Rating (IMDB)</th>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td>Trying (and Failing) to Go Viral</td>
+			<td>Episode 81</td>
+			<td>6.7/10</td>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td>Fighting (and Losing to) a 16-Year-Old</td>
+			<td>Episode 85</td>
+			<td>8.3/10</td>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td>Defeating Gravity with a Bubble?</td>
+			<td>Episode 154</td>
+			<td>8.9/10</td>
 		</tr>
 	</table>
 </body>
