--- a/asg4/leastfavorite.html
+++ b/asg4/leastfavorite.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Critique</title>
+	<title>Least Favorite (Fictional) Character</title>
 	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Rationale&display=swap" rel="stylesheet">
+	
+	<link href="styles.css" rel="stylesheet">
 </head>
 <body>
 <h1>Least Favorite (Fictional) Person</h1>
