--- a/asg4/leastfavorite.html
+++ b/asg4/leastfavorite.html
@@ -16,6 +16,7 @@
 	<link href="styles.css" rel="stylesheet">
 </head>
 <body>
+<p><a href="https://elizabeth-milani-is1.netlify.app/">Home</a></p>
 <h1>Least Favorite (Fictional) Person</h1>
 <p class="intro">My least favorite (fictional) person is Gentle Criminal from the anime <em>My Hero Academia</em> - not because he's a villain, but because he's really, really, really annoying. And also his character design is super ugly.</p>
 <h2>Better Villains</h2>
@@ -57,5 +58,7 @@
 			<td>8.9/10</td>
 		</tr>
 	</table>
+<h2>Media</h2>
+	<img src="img/gentle.jpg">
 </body>
 </html>
