--- a/asg4/leastfavorite.html
+++ b/asg4/leastfavorite.html
@@ -18,7 +18,7 @@
 <body>
 <p><a href="https://elizabeth-milani-is1.netlify.app/">Home</a></p>
 <h1>Least Favorite (Fictional) Person</h1>
-<p class="intro">My least favorite (fictional) person is Gentle Criminal from the anime <em>My Hero Academia</em> - not because he's a villain, but because he's really, really, really annoying. And also his character design is super ugly.</p>
+<p class="intro">My least favorite (fictional) person is <a href="https://myheroacademia.fandom.com/wiki/Danjuro_Tobita">Gentle Criminal</a> from the anime <em>My Hero Academia</em> - not because he's a villain, but because he's really, really, really annoying. And also his character design is super ugly.</p>
 <h2>Better Villains</h2>
 	<p><em>My Hero Academia</em> is filled with way better villains than this guy, such as:</p>
 	<ul>
