--- a/asg4/leastfavorite.html
+++ b/asg4/leastfavorite.html
@@ -36,6 +36,7 @@
 			<th></th>
 			<th>Episode Rating (IMDB)</th>
 		</tr>
+	<tbody>
 		<tr>
 			<td>Trying (and Failing) to Go Viral</td>
 			<td></td>
@@ -57,6 +58,7 @@
 			<td></td>
 			<td>8.9/10</td>
 		</tr>
+	</tbody>
 	</table>
 <h2>Media</h2>
 	<img src="img/gentle.jpg" width="45%">
