--- a/asg4/leastfavorite.html
+++ b/asg4/leastfavorite.html
@@ -25,6 +25,7 @@
 	<p class="intro">My least favorite (fictional) person is <a href="https://myheroacademia.fandom.com/wiki/Danjuro_Tobita">Gentle Criminal</a> from the anime <em>My Hero Academia</em> - not because he's a villain, but because he's really, really, really annoying. And also his character design is super ugly.</p>
 </div>
 
+<div class="info">
 <h2>Better Villains</h2>
 	<p><em>My Hero Academia</em> is filled with way better villains than this guy, such as:</p>
 	<ul>
@@ -66,7 +67,11 @@
 		</tr>
 	</tbody>
 	</table>
+</div>
+
+<div class="image">
 <h2>Media</h2>
-	<img src="img/gentle.jpg" width="45%">
+	<img src="img/gentle.jpg" width="25%">
+</div>
 </body>
 </html>
