--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<title>Internet Studio 1</title>
-	<link rel="stylesheet" href="./assets/css/styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Mr+Bedfort&family=Roboto:ital,wght@0,100..900;1,100..900&family=Vidaloka&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="main">
+	<div class="title">
+		<h1>Elizabeth Claire Milani</h1>
+	</div>
+	<div class="subtitle">
+		<p>Internet Studio 1 - 2335.001</p>
+	</div>
+</div>
 
 	<h1>The homepage for Internet Studio 1</h1>
 	<p>Assignments will be listed here.</p>
