--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Mr+Bedfort&family=Roboto:ital,wght@0,100..900;1,100..900&family=Vidaloka&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 <div id="main">
 	<div class="title">
@@ -16,7 +17,36 @@
 	</div>
 </div>
 
-	<h1>The homepage for Internet Studio 1</h1>
+<div id="aboutme">
+	<h2>About Me</h2>
+		<h3>Basic Info</h3>
+			<p>My name is Elizabeth Claire Milani; most people call me Lizz. I was born April 11th, 2006. I have one sister who is three years younger than me. I am majoring in ATEC General, with a focus on graphic design.</p>
+		<h3>Hobbies</h3>
+		<ul>
+			<li>Cosplay</li>
+			<li>Writing</li>
+			<li>Making Gifs</li>
+			<li>Listening to Music</li>
+			<li>Walking</li>
+		</ul>
+		<h3>Favorites</h3>
+		<ul>
+			<li><strong>Food:</strong> New York style pizza</li>
+			<li><strong>Colors:</strong>Purple, red, and black</li>
+			<li><strong>Song:</strong> "Eternal Sunshine" by Flower Face</li>
+			<li><strong>TV Show:</strong><em>Boku no Hero Academia</em></li>
+		</ul>
+		<h3>Goals</h3>
+		<ol>
+			<li>Get good grades</li>
+			<li>Level up my sewing skills</li>
+			<li>Learn Japanese</li>
+			<li>Write a novel</li>
+		</ol>
+</div>
+
+<div id="assignments">
+	<h3>Assignments</h3>
 	<p>Assignments will be listed here.</p>
 	<ul>
 		<li><a href="./asg1/index.html">Assignment 1</a></li>
@@ -27,8 +57,7 @@
 		<li><a href="./asg4/leastfavorite.html">Assignment 4: Least Favorite (Fictional) Person</a></li>
 	</ul>
 	<img src="assets/img/cat.jpg" alt="">
-
+</div>
 	<script src="./assets/js/main.js"></script>
 </body>
-</html>
 </html>
