--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 	</ul>
 	<img src="assets/img/cat.jpg" alt="">
 </div>
+
+<div id="media">
+	<h3>Pictures</h3>
+</div>
 	<script src="./assets/js/main.js"></script>
 </body>
 </html>
