--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
 </div>
 
 <div id="media">
+	<div class="text">
 	<h3>Pictures</h3>
+	</div>
+	<img src="assets/images/cosplay.jpg" alt="Cosplaying Jinx from Arcane: League of Legends.">
+	<img src="assets/images/vacation.jpg" alt="Photo from my vacation to Italy.">
 </div>
 	<script src="./assets/js/main.js"></script>
 </body>
