--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Internet Studio 1</title>
 	<link href="https://fonts.googleapis.com/css2?family=Mr+Bedfort&family=Roboto:ital,wght@0,100..900;1,100..900&family=Vidaloka&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
