--- a/asg5/dinner.html
+++ b/asg5/dinner.html
@@ -17,9 +17,40 @@
 	<p>Greetings! If you are on this list, it is because you are a fictional character who is terrible at cooking. I am hosting a dinner party on October 31st, with the primary goal of coming together to make the scariest dish imaginable.</p>
 </div>
 
+<div class="dabi">
+	<div class="image">
+        <img src="./img/dabi.jpg">
+	</div>
+	<div class="text">
+        <h2>Dabi</h2>
+		<p>Dabi here is the definition of overcooked. His fire powers exceed 3,000°F, meaning everything he interacts with gets thoroughly <em>roasted</em>. Also, he's unhinged enough to not hesitate in burning anything he cooks to a crisp, meaning he'll make the perfect cook for my terrifying meal.</p>
+    </div>
+</div>
+
+<div class="jinx">
+	<div class="image">
+		<img src="./img/jinx.jpg">
+	</div>
+	<div class="text">
+		<h2>Jinx</h2>
+		<p>Jinx is my wildcard. Her chaotic nature ensures that this meal will be completely unpredictable. She cooks up more bombs than food, so I'm hoping her contributions will allow this meal to have an explosive impact.</p>
+	</div>
+</div>
+	
+<div class="xielian">
+	<div class="image">
+		<img src="./img/xielian.jpg">
+	</div>
+	<div class="text">
+		<h2>Xie Lian</h2>
+		<p>Xie Lian, last but certainly not least, may as well be the god of kitchen horrors. His culinary adventures have single-handedly KO-ed gods, demons, ghosts, and exorcists alike. For my meal of horror, Xie Lian will be in charge of the recipe. (I also hope he'll use his cheerful nature to keep these other two characters from killing me!)</p>
+	</div>
+</div>
+	
 </body>
 
 
 </html>
+
 
 
