--- a/asg5/dinner.html
+++ b/asg5/dinner.html
@@ -8,8 +8,8 @@
 
 <body>
 
-<div class="topbar>
-	<p><a href="https://elizabeth-milani-is1.netlify.app/">Home</a></p>
+<div class="topbar">
+<p><a href="https://elizabeth-milani-is1.netlify.app/">Home</a></p>
 </div>
 
 <div class="header">
@@ -51,6 +51,7 @@
 
 
 </html>
+
 
 
 
