--- a/asg5/dinner.html
+++ b/asg5/dinner.html
@@ -7,14 +7,10 @@
 </head>
 
 <body>
-
-<div class="topbar">
-<p><a href="https://elizabeth-milani-is1.netlify.app/">Home</a></p>
-</div>
-<br>
 <div class="header">
 	<h1>You Are Cordially Invited...</h1>
 	<p>Greetings! If you are on this list, it is because you are a fictional character who is terrible at cooking. I am hosting a dinner party on October 31st, with the primary goal of coming together to make the scariest dish imaginable.</p>
+	<p><em><a href="https://elizabeth-milani-is1.netlify.app/">Homepage</a></em></p>
 </div>
 <br>
 <div class="dabi">
@@ -51,6 +47,7 @@
 
 
 </html>
+
 
 
 
