--- a/asg5/dinner.html
+++ b/asg5/dinner.html
@@ -42,11 +42,35 @@
 		<p>Xie Lian, last but certainly not least, may as well be the god of kitchen horrors. His culinary adventures have single-handedly KO-ed gods, demons, ghosts, and exorcists alike. For my meal of horror, Xie Lian will be in charge of the recipe. (I also hope he'll use his cheerful nature to keep these other two characters from killing me!)</p>
 	</div>
 </div>
-	
+
+<div class="menu">
+	<h2>Menu</h2>
+	<h3>Appetizers</h3>
+	<ul>
+		<li>Spicy Chips</li>
+		<li>Exploding Garlic Knots</li>
+		<li>Unidentifiable Purple Dish</li>
+	</ul>
+	<br>
+	<h3>Main Course</h3>
+	<ul>
+		<li>Coal-Fire Ashes</li>
+		<li>Exloding Pizza</li>
+		<li>Zombie Killer Meatballs</li>
+	</ul>
+	<h3>Desserts</h3>
+	<ul>
+		<li>Cinnamon Jelly Beans</li>
+		<li>Exploding Peeps</li>
+		<li>Sentient Ice Cream</li>
+	</ul>
+</div>
+
 </body>
 
 
 </html>
+
 
 
 
