--- a/asg5/dinner.html
+++ b/asg5/dinner.html
@@ -53,7 +53,7 @@
 	<br>
 	<h3>Main Course</h3>
 		<p>Coal-Fire Ashes</p>
-		<p>Exloding Pizza</p>
+		<p>Exploding Pizza</p>
 		<p>Zombie Killer Meatballs</p>
 	<br>
 	<h3>Desserts</h3>
@@ -66,6 +66,7 @@
 
 
 </html>
+
 
 
 
