--- a/asg5/dinner.html
+++ b/asg5/dinner.html
@@ -62,10 +62,23 @@
 		<p>Sentient Ice Cream</p>
 </div>
 
+<div class="rsvp">
+	<h2>RSVP</h2>
+	<form>
+		<label for="identity">Name:</label><br>
+		<select name="identity" required>
+			<option value="dabi">Dabi</option>
+			<option value="jinx">Jinx</option>
+			<option value="xielian">Xie Lian</option>
+		</select>
+	</form>
+</div>
+	
 </body>
 
 
 </html>
+
 
 
 
