--- a/asg5/dinner.html
+++ b/asg5/dinner.html
@@ -70,7 +70,17 @@
 			<option value="dabi">Dabi</option>
 			<option value="jinx">Jinx</option>
 			<option value="xielian">Xie Lian</option>
-		</select>
+		</select><br>
+		<p>Will you be able to make it?</p>
+		<input type="radio" name="availability" value="yes">
+		<label for="yes">Yes</label>
+		<input type="radio" name="availability" value="no">
+		<label for="no">No</label>
+		<input type="radio" name="availability" value="maybe">
+		<label for="maybe">Maybe</label><br>
+		<label for="diet">Dietary Restrictions</label>
+		<input type="text" name="diet"><br>
+		<input tyle="submit" value="Submit">
 	</form>
 </div>
 	
@@ -78,6 +88,7 @@
 
 
 </html>
+
 
 
 
