--- a/asg5/dinner.html
+++ b/asg5/dinner.html
@@ -78,7 +78,7 @@
 		<label for="no">No</label>
 		<input type="radio" name="availability" value="maybe">
 		<label for="maybe">Maybe</label><br>
-		<label for="diet">Dietary Restrictions</label>
+		<label for="diet">Dietary Restrictions</label><br>
 		<input type="text" name="diet"><br>
 		<input tyle="submit" value="Submit">
 	</form>
@@ -88,6 +88,7 @@
 
 
 </html>
+
 
 
 
