--- a/asg5/dinner.html
+++ b/asg5/dinner.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Dinner Invite</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Vidaloka&display=swap" rel="stylesheet">
 	<link href="styles.css" rel="stylesheet">
 </head>
 
@@ -88,6 +91,7 @@
 
 
 </html>
+
 
 
 
