--- a/asg5/dinner.html
+++ b/asg5/dinner.html
@@ -88,7 +88,7 @@
 		<input type="text" name="diet"><br>
 		<p> </p>
 		<p> </p>
-		<input tyle="submit" value="Submit">
+		<button type="button" id="submitButton">Submit</button>
 	</form>
 </div>
 	
@@ -96,6 +96,7 @@
 
 
 </html>
+
 
 
 
