--- a/asg6/index.html
+++ b/asg6/index.html
@@ -7,9 +7,18 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-	<h1>Website Template</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
+<div class="navigation">
+</div>
+<header>
 	
+</header>
+
+<main>
+	
+</main>
+
+<footer>
+	
+</footer>
 </body>
 </html>
