--- a/asg6/index.html
+++ b/asg6/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
 <div class="navigation">
+	<a href="./asg5/dinner.html">⇦Previous Assignment</a>
+	<a href="https://elizabeth-milani-is1.netlify.app/">HOME</a>
+	<p>Next Assignment⇨</p>
 </div>
-<header>
 	
+<header>
+	<h1>Assignment 6: Six Thinking Hats</h1>
 </header>
 
 <main>
