--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 		<li><a href="./asg3/index.html">Assignment 3: Readings</a></li>
 		<li><a href="./asg4/leastfavorite.html">Assignment 4: Least Favorite (Fictional) Person</a></li>
 		<li><a href="./asg5/dinner.html">Assignment 5: Dinner Party Invitation</a></li>
+		<li><a href="./asg6/index.html">Assignment 6: Six Thinking Hats</a></li>
 	</ul>
 </div>
 
