--- a/asg6/index.html
+++ b/asg6/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div class="navigation">
-	<a href="./asg5/dinner.html">⇦Previous Assignment</a>
-	<a href="https://elizabeth-milani-is1.netlify.app/">HOME</a>
+	<p>⇦<a href="./asg5/dinner.html">Previous Assignment</a></p>
+	<p><a href="https://elizabeth-milani-is1.netlify.app/">HOME</a></p>
 	<p>Next Assignment⇨</p>
 </div>
 	
