--- a/asg6/index.html
+++ b/asg6/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 <div class="navigation">
-	<p>⇦<a href="./asg5/dinner.html">Previous Assignment</a></p>
-	<p><a href="https://elizabeth-milani-is1.netlify.app/">HOME</a></p>
-	<p>Next Assignment⇨</p>
+	<ul></ul>
+		<li>⇦<a href="./asg5/dinner.html">⇦Previous Assignment</a></li>
+		<li><a href="https://elizabeth-milani-is1.netlify.app/">HOME</a></li>
+		<li>Next Assignment⇨</li>
 </div>
 	
 <header>
