--- a/asg6/index.html
+++ b/asg6/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="navigation">
 	<ul></ul>
-		<li>⇦<a href="./asg5/dinner.html">⇦Previous Assignment</a></li>
+		<li><a href="./asg5/dinner.html">⇦Previous Assignment</a></li>
 		<li><a href="https://elizabeth-milani-is1.netlify.app/">HOME</a></li>
 		<li>Next Assignment⇨</li>
 </div>
