--- a/asg6/index.html
+++ b/asg6/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>6 Thinking Hats</title>
+	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
