--- a/asg6/index.html
+++ b/asg6/index.html
@@ -22,12 +22,13 @@
 	<h1>Assignment 6: Six Thinking Hats</h1>
 </header>
 
-<main>
+<div class="interview">
 	
-</main>
+</div>
 
-<footer>
+<div class="project">
 	
-</footer>
+</div>
+	
 </body>
 </html>
