--- a/asg6/index.html
+++ b/asg6/index.html
@@ -23,11 +23,26 @@
 </header>
 
 <div class="interview">
-	
+	<h2>Interview</h2>
+	<h3>White Hat (Information)</h3>
+		<p>Many people have different processes for getting inspired. More research should be done on how the target audience typically finds inspiration, and what sort of projects (like this one) they'd need inspiration for.</p>
+	<h3>Red Hat (Emotion)</h3>
+		<p>Primary feelings are intrigue, but also confusion over how the site could work. Subject also says they'd feel relieved that they have some help getting inspired.</p>
+	<h3>Black Hat (Judgment)</h3>
+		<p>Could result in a lot of people having similar ideas if they all get their inspiration from the same place. There's also some concern about the line between inspiration and copying.</p>
+	<h3>Yellow Hat (Optimism)</h3>
+		<p>It would be easier for people in creative fields to come up with ideas without having to sell their souls to AI. Could also make the process of working on projects faster by shortening the ideation phase.</p>
+	<h3>Green Hat (Creativity)</h3>
+		<p>This site could bring ideas from different areas of the world for finding inspiration. It could help bring more depth to existing ideas as well.</p>
+	<h3>Blue Hat (Order)</h3>
+		<p>The goal of this site should be that more people are less stressed about brainstorming, and that they have a greater ability to come up with ideas on their own.</p>
 </div>
 
 <div class="project">
-	
+	<h2>Project</h2>
+	<p>After some debate, I've decided to change my project from a to-do list site to a site for those having issues finding inspiration for projects such as this one, inspired by my own struggles.</p>
+	<h3>How It's Changed</h3>
+		<p>Many people get inspired in different ways, so having a variety of methods to get inspired be offered by the site could take it to the next level. In addition, keeping the ideas vague could prevent users from coming away from the site with similar projects. My interviewee said it would be interesting to pull in a variety of ideas from all over the world, so I'm wondering if it wouldn't be possible to have a user interactivity function where they could share their own ideas.</p>
 </div>
 	
 </body>
