--- a/asg6/index.html
+++ b/asg6/index.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="project">
-	<h2>Project</h2>
+	<h2 class="projhead">Project</h2>
 	<p>After some debate, I've decided to change my project from a to-do list site to a site for those having issues finding inspiration for projects such as this one, inspired by my own struggles.</p>
 	<h3>How It's Changed</h3>
 		<p>Many people get inspired in different ways, so having a variety of methods to get inspired be offered by the site could take it to the next level. In addition, keeping the ideas vague could prevent users from coming away from the site with similar projects. My interviewee said it would be interesting to pull in a variety of ideas from all over the world, so I'm wondering if it wouldn't be possible to have a user interactivity function where they could share their own ideas.</p>
