--- a/asg7/index.html
+++ b/asg7/index.html
@@ -9,12 +9,20 @@
 <body>
 <div class="navigation">
 	<ul>
-		<li><a href="https://elizabeth-milani-is1.netlify.app/asg5/dinner.html">⇦Previous Assignment</a></li>
+		<li><a href="https://elizabeth-milani-is1.netlify.app/asg6/index.html">⇦Previous Assignment</a></li>
 		<li><a href="https://elizabeth-milani-is1.netlify.app/">HOME</a></li>
 		<li>Next Assignment⇨</li>
 	</ul>
 </div>
 	
 <header>
-	<h1>Assignment 6: Six Thinking Hats</h1>
+	<h1>Assignment 7: Political Candidate</h1>
 </header>
+
+<div class="main">
+	<h2>Candidate:</h2>
+</div>
+
+<aside>
+	
+</aside>
