--- a/asg7/index.html
+++ b/asg7/index.html
@@ -17,12 +17,19 @@
 	
 <header>
 	<h1>Assignment 7: Political Candidate</h1>
+	<p>The MEOW Political Party</p>
 </header>
 
 <div class="main">
-	<h2>Candidate:</h2>
+	<h2>Candidate: Hobbes</h2>
+		<p class="bio">Hobbes is a fictional tiger seen in the comic <em>Calvin & Hobbes</em> by Bill Watterson. He is the best friend of Calvin, and enjoys tuna fish, pouncing, and having philosophical discussions.</p>
+		<p class="platform">This fuzzy guy will make a great president for three reasons. Firstly, as seen with his love of puncing, he's aggressive and can take initiative, making him the perfect leader for a time of crisis. Secondly, he is shown to be friendly with children, showing that he will be invested in this nation's youth. And finally, his love of philosophical debate means he has a clear and complex understanding of right vs wrong and ethical decision making.</p>
+		<p class="link">You can learn more about the future president <a href="https://calvinandhobbes.fandom.com/wiki/Hobbes">HERE</a>!</p>
 </div>
 
 <aside>
-	
+	<h2>Running Mate: Bongo Cat</h2>
+		<p class="desc">Hobbes can come off as a little intimidating from time to time, so Bongo Cat's friendly demeanor can counteract that. Bongo Cat also cares about music, meaning this political duo will have an investment in the arts.</p>
 </aside>
+
+</body>
