--- a/asg7/index.html
+++ b/asg7/index.html
@@ -23,6 +23,7 @@
 	<p>The MEOW Political Party</p>
 </header>
 
+<div class="info">
 <div class="main">
 	<h2>Candidate: Hobbes</h2>
 		<img src="./imgs/HobbesHeartsCalvin.webp" alt="A cartoon tiger" class="hobbesimg">
@@ -36,7 +37,8 @@
 		<img src="./imgs/bongocat.png" alt="A cartoon cat playing a pair of bongos" class="bongoimg">
 		<p class="desc">Hobbes can come off as a little intimidating from time to time, so Bongo Cat's friendly demeanor can counteract that. Bongo Cat also cares about music, meaning this political duo will have an investment in the arts.</p>
 </aside>
-
+</div>
 </body>
+
 
 
