--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 		<li><a href="./asg4/leastfavorite.html">Assignment 4: Least Favorite (Fictional) Person</a></li>
 		<li><a href="./asg5/dinner.html">Assignment 5: Dinner Party Invitation</a></li>
 		<li><a href="./asg6/index.html">Assignment 6: Six Thinking Hats</a></li>
+		<li><a href="./asg7/index.html">Assignment 7: Political Candidate</a></li>
+		<li><a href="./asg7/wireframes.html">Assignment 7: Wireframes</a></li>
 	</ul>
 </div>
 
