--- a/asg7/wireframes.html
+++ b/asg7/wireframes.html
@@ -30,5 +30,11 @@
       <p>More designers and products managers are cusing software, especially on the graphic design side of things. Software is also more focused and better for collaboration and integration with other tools.</p>
   <h2>Write a paragraph on which type of wireframing style would work best with your project and why.</h2>
 </main>
-  
+
+<div class="wireframes">
+	<h2>INSPOtting Dot Com</h2>
+	<p>A website by Elizabeth Milani.</p>
+	<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/WTdI6V28JzUO9jJrZdhXBD/Wireframe?node-id=0-1&embed-host=share" allowfullscreen></iframe>
+</div>
+	
 </body>
