--- a/asg7/wireframes.html
+++ b/asg7/wireframes.html
@@ -29,6 +29,7 @@
     <h3>Disadvantages</h3>
       <p>More designers and products managers are cusing software, especially on the graphic design side of things. Software is also more focused and better for collaboration and integration with other tools.</p>
   <h2>Write a paragraph on which type of wireframing style would work best with your project and why.</h2>
+		<p>I believe that using simple grey boxes to wireframe would be best for me, as someone who often gets distracted by details I don't need to think about yet during planning phases. I also think using technology would be better, since that is what I am more comfortable with, and it is more intuitive to a beginner.</p>
 </main>
 
 <div class="wireframes">
