--- a/asg8/index.html
+++ b/asg8/index.html
@@ -13,7 +13,7 @@
 
 <div class="navigation">
 	<li><a href="../asg7/index.html">⇦Previous Assignment</a></li>
-	<li><a href="../index.html">HOME</a></li>
+	<li class="home"><a href="../index.html">HOME</a></li>
 	<li>Next Assignment⇨</li>
 </div>
 
@@ -44,5 +44,6 @@
 </body>
 
 </html>
+
 
 
