--- a/asg8/index.html
+++ b/asg8/index.html
@@ -25,7 +25,7 @@
 <div class="main">
 	<div class="names">
 		<h2>Potential Names</h2>
-			<p>I had already settled on INSPOtting for my website's name. The main goal of my domain name discussion was to find a good suffix. Some of the ones I looked at included:</p>
+			<p class="first">I had already settled on INSPOtting for my website's name. The main goal of my domain name discussion was to find a good suffix. Some of the ones I looked at included:</p>
 			<ul>
 				<li>inspotting.org - $7.48 per year</li>
 				<li>inspotting.design - $10.98 per year</li>
@@ -35,7 +35,7 @@
 	</div>
 	<div class="convo">
 		<h2>A Conversation About Potential Names</h2>
-			<p>When talking with my classmate, the breadth of the conversation was centered around budgeting. It was a big priority for both of us to find a domain name that had a good look to it, and wasn't too unprofessional, while also choosing something affordable - i.e. not going with inspotting.inc! Not only is that a lot of money we don't have, but there's also more room for variety in picking one of the cheaper, weirder options.</p>
+			<p class="first">When talking with my classmate, the breadth of the conversation was centered around budgeting. It was a big priority for both of us to find a domain name that had a good look to it, and wasn't too unprofessional, while also choosing something affordable - i.e. not going with inspotting.inc! Not only is that a lot of money we don't have, but there's also more room for variety in picking one of the cheaper, weirder options.</p>
 			<p>We also discussed the value of certain suffixes over others. A site such as inspotting.design does a very good job giving prospective visitors an idea of what the site is about. But on the flip side, inspotting.org looks more professional and trustworthy.</p>
 			<p>In the end, the name I like best is inspotting.design! There's a lot of pressure with a ".org" that I'm not sure I'm ready for. Also, I love how it gives a sense of what the site is about.</p>
 	</div>
@@ -44,6 +44,7 @@
 </body>
 
 </html>
+
 
 
 
